# mcp-security-scanner

./: .gitignore  .pre-commit-hooks.yaml  ANNOUNCEMENT.md  LICENSE  PRODUCT.md  README.md  ecoscan-targets.json.example  pyproject.toml
.github/workflows/: ci.yml
action/: README.md  action.yml
docs/: CLIENT_ONE_PAGER.md  SAAS-TIER-SPEC.md  SOW_TEMPLATE.md
docs/watch/: DIGEST_TEMPLATE.md  LICENSING.md  ONBOARDING.md  TRIAGE_RUNBOOK.md
mcp_scanner/: __init__.py  boundaries.py  cli.py  client_report.py  ecosystem_scan.py  finding_identity.py  js_util.py  models.py  reachability.py  report_generator.py  reporting.py  scan_meta.py  scanner.py  taint.py  tool_registry.py  watch_summary.py
mcp_scanner/detectors/: __init__.py  auth_posture.py  base.py  codegen_injection.py  job_hazards.py  param_injection.py  secret_handling.py  secret_leak_response.py  tool_scope_creep.py
scripts/: check_readme_counts.py
tests/: conftest.py  test_auth_posture.py  test_boundaries.py  test_check_readme_counts.py  test_cli_client_report.py  test_cli_fail_on_gate.py  test_cli_report_command.py  test_client_report.py  test_codegen_injection.py  test_ecosystem_scan.py  test_finding_id.py  test_job_hazards.py  test_job_hazards_backlog.py  test_job_hazards_comments.py  test_job_hazards_inbody_gate.py  test_js_util.py  test_param_injection.py  test_param_injection_alias_js.py  test_param_injection_cjs.py  test_param_injection_js.py  test_param_injection_mts_cts.py  test_param_injection_node_prefix_js.py  test_param_injection_regexp_exec_fp.py  test_param_injection_regexp_scope_fp.py  test_precommit_hook.py  test_reachability.py  test_reachability_decidable.py  test_report_generator.py  test_report_golden.py  test_reporting.py  test_round3_onelaw_fixes.py  test_scan_meta.py  test_secret_handling.py  test_secret_handling_js.py  test_secret_leak_brace_string_js.py  test_secret_leak_oneliner_js.py  test_secret_leak_response.py  test_secret_leak_response_js.py  test_secret_leak_response_lowlevel_sdk.py  test_secret_log_template_interpolation_js.py  (+26 more)
(+151 files in other folders)
