[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-security-scanner"
version = "0.1.0"
description = "Static security scanner for MCP servers — codegen injection, tool-param injection, auth posture, secret handling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jaime Bell" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pyyaml>=6"]

[project.scripts]
mcp-scan = "mcp_scanner.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_scanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
