[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-security-scanner"
version = "0.1.0"
description = "Static security scanner for MCP servers — codegen injection, tool-param injection, auth posture, secret handling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jaime Bell" }]
dependencies = []

[project.optional-dependencies]
# cryptography is in dev (not just `certs`) so CI actually exercises the
# self-signed-cert demotion logic instead of skipping it silently -- a
# clean "pip install .[dev]" venv with no crypto lib would otherwise
# importorskip every cert-dependent test and CI would report green while
# testing nothing about that code path (round-2 N-vote P0-1 fix).
dev = ["pytest>=7", "pyyaml>=6", "cryptography>=41"]
# Optional (runtime, non-dev installs): enables precise self-signed-
# certificate detection for the tracked-secret-file test-cert demotion
# (secret_handling.py). Never required -- when absent, that demotion
# fails closed (stays flagged, never guessed).
certs = ["cryptography>=41"]

[project.scripts]
mcp-scan = "mcp_scanner.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_scanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
